--- a/app/views/schedule/index.html.erb
+++ b/app/views/schedule/index.html.erb
@@ -7,6 +7,7 @@
 <body>
 <div id="container" class="span-24">
 <%= render "layouts/navigation" %>
+  <% if @has_meetup %>
   <div id="meetup" class=" prepend-1 span-12">
 <%= form_tag 'schedule/schedule_meetup_event' , :method=> :post do %>
     <fieldset>
@@ -30,6 +31,7 @@
     </fieldset>
 <% end %>
   </div>
+  <% end %>
   <div id="twitter" class=" prepend-1 span-12">
 <%= form_tag 'schedule/schedule_tweet' , :method=> :post do %>
     <fieldset>
