--- a/app/views/schedule/index.html.erb
+++ b/app/views/schedule/index.html.erb
@@ -7,7 +7,7 @@
 <body>
 <div id="container" class="span-24">
 <%= render "layouts/navigation" %>
-  <div id="meetup" class=" prepend-1 span-12">
+  <div id="meetup-event" class=" prepend-1 span-12">
 <%= form_tag 'schedule/schedule_meetup_event' , :method=> :post do %>
     <fieldset>
     <legend>Schedule Meetup Event Creation</legend>
@@ -15,7 +15,7 @@
     <%= text_field_tag 'meetup_event_schedule_date' %> -
     <%= time_select('meetup_event_schedule_time',"", {:default=>Time.now, :minute_step => 15}) %><br>
     <%= label_tag 'meetup_event_group','Meetup Group:' %><br>
-    <%= select('meetup_event_group','meetup_group_id',@meetup_groups) %><br>
+    <%= select('meetup_event_group','meetup_group_id',@meetup_groups_admin) %><br>
     <%= label_tag 'meetup_event_datetime', "Event Start Date/Time: "%><br>
     <%= text_field_tag 'meetup_event_date' %> -
     <%= time_select('meetup_event_time',"", {:default=>Time.now, :minute_step => 15}) %><br>
@@ -28,6 +28,23 @@
     
     <%= submit_tag 'Schedule Event', :class=>'orange' %>
     </fieldset>
+<% end %>
+  </div>
+  <div id="meetup-message" class="prepend-1 span-12">
+    <%= form_tag "schedule/schedule_meetup_comment", :method=> :post do %>
+      <fieldset>
+        <legend>Schedule Meetup Comment</legend>
+        <%= label_tag 'meetup_comment_schedule', "Schedule Date/Time: "%><br>
+        <%= text_field_tag 'meetup_comment_schedule_date'%> -
+        <%= time_select('meetup_comment_schedule_time',"", {:default=>Time.now, :minute_step => 15}) %><br>
+        <%= label_tag 'meetup_group','Meetup Group:' %><br>
+        <%= select('meetup_group','meetup_group_id',@meetup_groups) %><br> 
+        <%= label_tag 'meetup_event','Meetup Event:' %><br>
+        <%= select('meetup_event','meetup_event_id',[])%><br>
+        <%= label_tag 'meetup_event_comment','Comment:' %><br>
+        <%= text_area_tag 'meetup_event_comment' %><br>
+        <%= submit_tag 'Schedule Comment', :class=>'orange' %>
+  </fieldset>
 <% end %>
   </div>
   <div id="twitter" class=" prepend-1 span-12">
