Schedule UI Cleanup

--- a/app/assets/stylesheets/schedule.css.scss
+++ b/app/assets/stylesheets/schedule.css.scss
@@ -13,3 +13,6 @@
 .ui-timepicker-rtl dl { text-align: right; }
 .ui-timepicker-rtl dl dd { margin: 0 65px 10px 10px; }
 
+#meetup_event_group_meetup_group_id, #meetup_group_meetup_group_id,#meetup_event_meetup_event_id, #meetup_event_venue_meetup_venue_id {
+  width:410px;
+}
